<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="278dp"
        android:layout_height="72dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="633dp"
        android:text="@string/travel_packing"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="233dp"
        android:layout_height="53dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="518dp"
        android:text="@string/add_to_packing_list"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="415dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_item_name"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginStart="218dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="413dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_item_quantity"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="152dp"
        android:layout_height="51dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="259dp"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="261dp"
        android:text="@string/next"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="70dp"
        android:text="@string/exit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>